fix: restore app_id parameter in Discloud deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,3 +17,4 @@ jobs:
       - uses: discloud/deploy-action@v1
         with:
           token: ${{ secrets.DISCLOUD_TOKEN }} # Required
+          app_id: "azurajs"
